2008-02-28  Mark Ellis <mark@mpellis.org.uk>

	* report type of rapi errors in get_device_name_via_rapi()

2008-02-20  Mark Ellis <mark@mpellis.org.uk>

	* objectify device info dialog
	* add submenu per device for info and explore
	* check for connected devices on start

2008-02-11  Mark Ellis <mark@mpellis.org.uk>

	* initialize dbus pointers to NULL in sync-engine func

2008-02-06  Mark Ellis <mark@mpellis.org.uk>

	* add partnership viewing for WM5/sync-engine

2008-02-05  Mark Ellis <mark@mpellis.org.uk>

	* allow for lower version libhal
	* initialise hal prop vars

2008-01-24  Mark Ellis <mark@mpellis.org.uk>

	* support for hal
	* support for WM6 passworded devices

2008-01-09  Mark Ellis <mark@mpellis.org.uk>

	* added src/LICENCE.* to EXTRA_DIST
	* created COPYING to refer to LICENCE.*

2007-10-17  Mark Ellis <mark@mpellis.org.uk>

	* set session manager not to restart us if
	   running in foreground, thanks to Iain Buchanan

2007-10-16  Mark Ellis <mark@mpellis.org.uk>

	* bugfixes for failed rapi connection

2007-09-18  Mark Ellis <mark@mpellis.org.uk>

	* synce_info_new() has changed
	* fix build without libnotify

2007-08-30  Mark Ellis <mark@mpellis.org.uk>

	* add simple module plugin mechanism for
	   connect/disconnect events

2007-08-23  Mark Ellis <mark@mpellis.org.uk>

	* add device info dialog for system info,
	   power status, partnership control(for pre-WM5)
	* removed unused vars and old debugging

2007-07-12  Mark Ellis <mark@mpellis.org.uk>

	* added gconf schema
	* improve gnome_program_ usage

2007-07-11  Mark Ellis <mark@mpellis.org.uk>

	* added notification for device (dis)connect
	* src/Makefile.am - tidy up
	* src/main.c - add glib/gstdio.h
	* improve icon use

2007-07-10  Mark Ellis <mark@mpellis.org.uk>

	* made SynceTrayIcon as subclass of EggTrayIcon

2007-07-09  Mark Ellis <mark@mpellis.org.uk>

	* added man page
	* odccm-client.c - fixed return values from odccm_device_get_rapi_connection()